--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   },
-  "homepage": "https://elivan9295.github.io/gnugnuwedding"
+  "homepage": "https://www.gnugnuwedding.site"
 }
