--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && echo 'www.gnugnuwedding.site' > dist/CNAME",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
